# context-engine-service

./: .gitignore  =13.0.0  API_USAGE_EXAMPLES.md  BUILD_COMPLETE.md  DIMENSION_REFERENCE.md  ERROR_HANDLING.md  FINAL_VALIDATION_REPORT.md  GRAPHRAG_CLIENT_SUMMARY.md  PHASE9_DELIVERABLES_INDEX.md  PRODUCTION_DEPLOYMENT_COMPONENTS.md  PRODUCTION_READINESS.md  PROJECT_SETUP.md  README.md  USAGE_GUIDE.md  api.md  grafana-dashboard.json  luris-context-engine.service  pyproject.toml  requirements.txt  run.py
docs/: api-audit-quick-reference.md  api-audit-report.md  deployment.md  monitoring.md  product-specification.md  technical-specification.md
examples/: graphrag_client_example.py
monitoring/: GRAFANA_SETUP.md  deploy_monitoring.sh  grafana-dashboard.json  prometheus-alerts-context-engine.yml
src/api/: main.py
src/clients/: GRAPHRAG_CLIENT_QUICK_REF.md  GRAPHRAG_CLIENT_README.md  graphrag_client.py
src/core/: cache_manager.py  context_builder.py  dimension_analyzer.py
src/models/: dimensions.py
tests/: E2E_TESTING_GUIDE.md  README.md  conftest.py
tests/ci/: run_tests_ci.sh
tests/e2e/: MANIFEST_USAGE.md  README.md  TEST_RUNNER_GUIDE.md  USAGE.md  __init__.py  check_services.py  data_manifest.json  discover_data.py  generate_quality_report.py  run_comprehensive_tests.py  test_all_endpoints.py  test_service_integration.py  test_with_manifest.py
tests/fixtures/: context_fixtures.py  sample_cases.json  test_fixtures_validation.py
tests/integration/: test_api_integration.py
tests/performance/: baseline_tests.py
tests/results/: QUALITY_ANALYSIS_SUMMARY.md  (+20 more)
(+7 files in other folders)
